commit2 , added image links and subheading

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="images/science2.png" type="image/icon type">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -84,38 +85,57 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What i do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>I have been proactively exploring various fields in search of my final Tech stack. Following are some areas i'm knowledgeable about and have experience in working with.</p>
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<span style="width: 90px; height: 90px; display:inline-block;">
+										<img class="image" src="images/png/002-coding.png" style="display:inline-block; width:100%;height:auto;"></img>	
+									</span>
+									<h3>Competitive Programming</h3>
+									<p> following are platforms i have competed on </p>
+										<ul>
+											<li><a href="https://www.codechef.com/users/kastrahl" target="_blank"><img src="images/png/codechef-icon.png" style="width: auto;;height:40px;" ></a></li>
+											<li><a href="https://leetcode.com/kastrahl" target="_blank"><img src="images/png/leetcode-icon.png" style="width:auto;height:30px;" ></a></li>
+											<li><a href="https://www.hackerearth.com/@kushagraarora123" target="_blank"><img src="images/png/hackerearth-icon.png" style="width:auto;height:25px;" ></a></li>
+										</ul>
 								</section>
+
 								<section>
 									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
+									<h3>Android Development</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
+
 								<section>
 									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
+									<h3>Web Development</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
+
 								<section>
 									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
+									<h3>Cloud Computing</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
+
 								<section>
 									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
+									<h3>Debugging</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
+
 								<section>
 									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
+									<h3>Music</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
+
+								<section>
+									<span class="icon major fa-gem"></span>
+									<h3>Gaming</h3>
+									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								</section>
+
 							</div>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn more</a></li>
