commit on master , added icons to subheading in what i do

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who am I?</a></li>
-							<li><a href="#two">What do i do? </a></li>
+							<li><a href="#one">Who I am</a></li>
+							<li><a href="#two">What i do </a></li>
 							<li><a href="#three">Get in touch !</a></li>
 						</ul>
 					</nav>
@@ -32,8 +32,8 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Hello</h1>
-							<p> My name's <a href="https://www.linkedin.com/in/kastrahl/t" target="_blank">Kushagra Arora</a><br />
-							,currently a sophomore  B.Tech IT student at <a href="https://jssaten.ac.in/" target="_blank">JSS academy of technical education,Noida </a>.</p>
+							<p> My name's <a href="https://www.linkedin.com/in/kastrahl/t" target="_blank"> Kushagra Arora</a> <br>
+							currently a sophomore  B.Tech IT student at <a href="https://jssaten.ac.in/" target="_blank">JSS academy of technical education,Noida </a>.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -47,7 +47,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>STUDENT</h2>
-									<p>Currently pursuing my bachelors in technology from JSSATEN under Information Technology branch. I am fortunate to be an alumni of St Peter's College and Sumeet Rahul Goel Memorial School .</p>
+						 			<p>Currently pursuing my bachelors in technology from JSSATEN under Information Technology branch. I am fortunate to be an alumni of St Peter's College and Sumeet Rahul Goel Memorial School .</p>
 									<ul class="actions">
 										<li><a href="generic_student.html" class="button">Learn more</a></li>
 									</ul>
@@ -62,7 +62,7 @@
 									<p>Undertook several projects spanning a variety of different technologies and languages , some as mini-projects for college and others as means to improve my coding skills .
 									</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="generic_coder.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -74,7 +74,7 @@
 									<h2>LEARNER</h2>
 									<p>I LOVE to learn, be it about music <i class="fa fa-headphones-alt"> </i>, art <i class="fa fa-paint-brush"> </i>, cooking <i class="fa fa-utensils"> </i>, editing and obviously coding.. Exploring new fields always opens up new possibilities and enhances my creativity.  </p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="generic_learner.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -101,38 +101,42 @@
 								</section>
 
 								<section>
-									<span class="icon solid major fa-lock"></span>
+									<span style="width: 90px; height: 90px; display:inline-block;">
+										<img class="image" src="images/png/android.png" style="display:inline-block; width:100%;height:auto;"></img>	
+									</span>
 									<h3>Android Development</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 
 								<section>
-									<span class="icon solid major fa-cog"></span>
+									<span style="width: 90px; height: 90px; display:inline-block;">
+										<img class="image" src="images/png/002-coding.png" style="display:inline-block; width:100%;height:auto;"></img>	
+									</span>
 									<h3>Web Development</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 
 								<section>
-									<span class="icon solid major fa-desktop"></span>
+									<span style="width: 90px; height: 90px; display:inline-block;">
+										<img class="image" src="images/png/004-cloud-coding.png" style="display:inline-block; width:100%;height:auto;"></img>	
+									</span>
 									<h3>Cloud Computing</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 
 								<section>
-									<span class="icon solid major fa-link"></span>
-									<h3>Debugging</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-
-								<section>
-									<span class="icon major fa-gem"></span>
-									<h3>Music</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-
-								<section>
-									<span class="icon major fa-gem"></span>
+									<span style="width: 90px; height: 90px; display:inline-block;">
+										<img class="image" src="images/png/005-game-controller.png" style="display:inline-block; width:100%;height:auto;"></img>	
+									</span>
 									<h3>Gaming</h3>
+									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								</section>
+
+								<section>
+									<span style="width: 90px; height: 90px; display:inline-block;">
+										<img class="image" src="images/png/009-music-player.png" style="display:inline-block; width:100%;height:auto;"></img>	
+									</span>
+									<h3>Music</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 
