final index.html (no background services yet connected ) final front view

--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
 										<img class="image" src="images/png/android.png" style="display:inline-block; width:100%;height:auto;"></img>	
 									</span>
 									<h3>Android Development</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<p>Mobile phones have penetrated User market to an extreme degree, these are the weapons of renaissance of mordern technological age.<br> Thus it's fitting to be familiar with the OS that has the largest market share - ANDROID.<br>
+									I'm well versed in android app development through<br> JAVA and KOTLIN </p>
 								</section>
 
 								<section>
@@ -113,7 +114,7 @@
 										<img class="image" src="images/png/002-coding.png" style="display:inline-block; width:100%;height:auto;"></img>	
 									</span>
 									<h3>Web Development</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<p>Having a keen interest in working of the digital machinery that is the internet, i'm actively trying to learn and practice my skills in web development under FRONT-END. <br>(which this site is evident of) </p>
 								</section>
 
 								<section>
@@ -121,7 +122,8 @@
 										<img class="image" src="images/png/004-cloud-coding.png" style="display:inline-block; width:100%;height:auto;"></img>	
 									</span>
 									<h3>Cloud Computing</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<p>Software and Processing as services is taking the market like wildfire, thus I've developed skills relating to various cloud computing platforms 
+										such as Google Cloud Platform and Microsoft Azure through their events of 30days of GCP and AZURE challenges.</p>
 								</section>
 
 								<section>
@@ -129,7 +131,7 @@
 										<img class="image" src="images/png/005-game-controller.png" style="display:inline-block; width:100%;height:auto;"></img>	
 									</span>
 									<h3>Gaming</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<p>In my free time , I like to explore the creations of virtual worlds and epic stories ,all presented through unique narratives which are VIDEO GAMES.</p>
 								</section>
 
 								<section>
@@ -137,7 +139,7 @@
 										<img class="image" src="images/png/009-music-player.png" style="display:inline-block; width:100%;height:auto;"></img>	
 									</span>
 									<h3>Music</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<p>If food is supplement for the body,<br> then Music is the nourishment for the soul <br> I love indie music.</p>
 								</section>
 
 							</div>
@@ -151,7 +153,8 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>If you are interested in a collaboration or wish to give me a chance to work under your organisation ,I'll be more than happy to oblige and thankful for the oppurtunity .<br>
+								Kindly drop any queries or collaboration requests.</p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
@@ -205,7 +208,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; MIT lisence. All rights reserved.</li><li>Design with <img src="images/png/heart.png" style="height: 20px;width: auto;"> by <a href="https://www.instagram.com/k.aroura">Kushagra</a></li>
 					</ul>
 				</div>
 			</footer>
