edited years in student subheading to display years of education

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>STUDENT</h2>
-						 			<p>Currently pursuing my bachelors in technology from JSSATEN under Information Technology branch. I am fortunate to be an alumni of St Peter's College and Sumeet Rahul Goel Memorial School .</p>
+						 			<p>Currently pursuing my bachelors in technology from JSSATEN under Information Technology branch. I am fortunate to be an alumni of : <br>St Peter's College (2004-2016) and <br>Sumeet Rahul Goel Memorial School (2016-2018) .</p>
 									<ul class="actions">
 										<li><a href="generic_student.html" class="button">Learn more</a></li>
 									</ul>
