connected other html pages to index learn more functionality

--- a/generic_coder.html
+++ b/generic_coder.html
@@ -6,22 +6,23 @@
 -->
 <html>
 	<head>
-		<title>Generic - Hyperspace by HTML5 UP</title>
+		<title>PROJECTS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/science2.png" type="image/icon type">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Hyperspace</a>
+				<a href="index.html" class="title">KUSHAGRA ARORA</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="generic_student.html" class="active">back</a></li>
+						<li><a href="generic_learner.html">next</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -32,10 +33,59 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">A Generic Page</h1>
+							<h1 class="major">Projects</h1>
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<h2>MyRations</h2>
+							<p>An android app to track your grocery list with ease </p>
+							<p><ul>
+								<li>records stored ration items</li>
+								<li>calculates average usage based on user input</li>
+								<li>Add or remove new inventory</li>
+								<li>Alerts user when ration is out of stock</li>
+							</ul></p>
+							click here for repository <i class="fas fa-long-arrow-alt-right"></i> <a href="https://github.com/kastrahl/MyRation"> (MyRation) </a>
+						</div>
+						<div class="inner">
+							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<h2>Dice Roller</h2>
+							<p>An android app using KOTLIN, made during <a href="https://developer.android.com/courses/study-jams" target="_blank">ANDROID STUDY JAMS  </a></p>
+							<p>
+								<ul>
+									<li>Tap roll to roll a dice infinitely</li>
+									<li>Introduced me to fundamentals of android app development</li>
+									<li>Learned about conditional statements and display of images in application </li>
+								</ul>
+							</p>
+							click here for repository <i class="fas fa-long-arrow-alt-right"></i> <a href="https://github.com/kastrahl/Dice_roller"> (Dice Roller) </a>
+
+						</div>
+						<div class="inner">
+							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<h2>Tip Calculator</h2>
+							<p>Another android app using KOTLIN, made during <a href="https://developer.android.com/courses/study-jams" target="_blank">ANDROID STUDY JAMS  </a></p>
+							<p>
+								<ul>
+									<li>travelling to the west?</li>
+									<li>Use this app to calculate tip amount</li>
+									<li>learned about implementing math libraries and calculations in kotlin classes</li>
+								</ul>
+							</p>
+							click here for repository <i class="fas fa-long-arrow-alt-right"></i> <a href="https://github.com/kastrahl/Tip-calculator"> (Tip Calculator) </a>
+
+						</div>
+						<div class="inner">
+							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<h2>CV Website</h2>
+							<p>A benginner website to display my portfolio in form of a simple website</p>
+							<p>
+								<ul>
+									<li>Use HTML and CSS to make a interactive and user friendly website</li>
+									<li>Implemented various techniques and learned new skills under web development</li>
+									<li>Showcase my Cv/Resume in form of a website</li>
+								</ul>
+							</p>
+							click here for repository <i class="fas fa-long-arrow-alt-right"></i> <a href="https://github.com/kastrahl/kastrahl.github.io"> (CV site) </a>
+
 						</div>
 					</section>
 
