--- a/generic_student.html
+++ b/generic_student.html
@@ -6,22 +6,22 @@
 -->
 <html>
 	<head>
-		<title>Generic - Hyperspace by HTML5 UP</title>
+		<title>EDUCATION</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/science2.png" type="image/icon type">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Hyperspace</a>
+				<a href="index.html" class="title">KUSHAGRA ARORA</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="generic_coder.html" class="active">Next</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -32,10 +32,24 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">A Generic Page</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<h1 class="major">EDUCATION</h1>
+							<span class="image fit"><img src="images/stpeters.jpg" alt="" /></span>
+							<p>For my elementary and secondary education, I was a student in St Peter's College ,Agra <br>(ICSE) </p>
+							<p>(2004 - 2016) with 91.6% </p>
+						</div>
+					</section>
+					<section id="main" class="wrapper">
+						<div class="inner">
+							<span class="image fit"><img src="images/Srgms.jpg" alt="" /></span>
+							<p>For my Senior Secondary, I shifted to Sumeet Rahul Goel Memorial Sr.Sec. School<br> (CBSE) </p>
+							<p>(2016-2018) with 80.0%</p>
+						</div>
+					</section>
+					<section id="main" class="wrapper">
+						<div class="inner">
+							<span class="image fit"><img src="images/JSS-NEW.jpg" alt="" /></span>
+							<p>Currently, pursuing bachelors of Technology from J.S.S Academy of Technical Education, Noida sec-62 </p>
+							<p>(2019-2023) expected</p>
 						</div>
 					</section>
 
