--- a/generic_student.html
+++ b/generic_student.html
@@ -59,7 +59,7 @@
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; MIT lisence. All rights reserved.</li><li>Design with <img src="images/png/heart.png" style="height: 20px;width: auto;"> by <a href="https://www.instagram.com/k.aroura">Kushagra</a></li>
 					</ul>
 				</div>
 			</footer>
