added ccertificate and images to learner section  , tested and found way to implement images in single line maintaing aspect ration and text alignment

--- a/generic_learner.html
+++ b/generic_learner.html
@@ -12,6 +12,26 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="images/science2.png" type="image/icon type">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+		<style>
+			* {
+			  box-sizing: border-box;
+			}
+			
+			.column {
+			  float: left;
+			  width: 33.33%;
+			  padding: 10px;
+			}
+			
+			/* Clearfix (clear floats) */
+			.row::after {
+			  content: "";
+			  clear: both;
+			  display: table;
+			}
+			</style>
+
 	</head>
 	<body class="is-preload">
 
@@ -30,21 +50,144 @@
 			<div id="wrapper">
 
 				<!-- Main -->
+				<!--
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">SKILLS & PARTICIPATIONS</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/Kushagra Arora.png" alt="" /></span>
+							<h2>ANDROID STUDY JAMS</h2>
 							<p> . </p>
 						</div>
 					</section>
+					<section id="main" class="wrapper">
+						<div class="inner">
+							<span class="image fit"><img src="images/Participation Certificate-1.png" alt="" /></span>
+							<h2>30 Days Of Google Cloud Platform</h2>
+							<p> . </p>
+						</div>
+					</section>
+					<section id="main" class="wrapper">
+						<div class="inner">
+							<span class="image fit"><img src="images/Kushagra Arora-NDG Linux Unhatc-certificate-1.png" alt="" /></span>
+							<h2>Linux Unhatched by 	CISCO NETWORK ACADEMY</h2>
+							<p> . </p>
+						</div>
+					</section>
+					<section id="main" class="wrapper">
+						<div class="inner">
+							<span class="image fit"><img src="images/ca-5-1.png" alt="" /></span>
+							<h2>Campus ambassador of JSSATEN for event MOKSHA,NSUT </h2>
+							<p> . </p>
+						</div>
+					</section>
+					<section id="main" class="wrapper">
+						<div class="inner">
+							<span class="image fit"><img src="images/Java_certificate.jpg" alt="" /></span>
+							<h2>JAVA course from Sololearn</h2>
+							<p> . </p>
+						</div>
+					</section>
+					<section id="main" class="wrapper">
+						<div class="inner">
+							<span class="image fit"><img src="images/Progate-git.png" alt="" /></span>
+							<h2>Git learning challenge by PROGATE</h2>
+							<p> . </p>
+						</div>
+					</section>
+				-->
 
+					<section id="main" class="wrapper">
+						<div class="inner">
+
+							<span class="image fit">
+
+								<div class="row">
+
+									<div class="column">
+									  <h2 style="text-align: center;">ANDROID STUDY JAMS</h2>
+									  <img src="images/Kushagra Arora.png" alt="MOKSHA" style="width:100%">
+									  <p style="text-align: center;"> completed under DSC JSSATEN</p>
+									</div>
+
+									<div class="column">
+										<h2 style="text-align: center;">30 Days Of GCP</h2>
+										<img src="images/Participation Certificate-1.png" alt="Forest" style="width:100%">
+										<P style="text-align: center;">by Google Cloud Platform during october</P>  
+									</div>
+
+									<div class="column">
+										<h2 style="text-align: center;">Linux Unhatched</h2>
+										<img src="images/Kushagra Arora-NDG Linux Unhatc-certificate-1.png" alt="linus-certificate" style="width:100%">
+										<p style="text-align: center;"> by 	CISCO NETWORK ACADEMY</p>  
+									</div>
+
+								</div>
+
+							</span>
+						</div>
+					</section>
+
+					<section id="main" class="wrapper">
+						<div class="inner">
+							
+							<span class="image fit">
+
+								<div class="row">
+
+									<div class="column">
+									  <h2 style="text-align: center;">Campus ambassador </h2>
+									  <img src="images/ca-5-1.png" alt="MOKSHA" style="width:100%">
+									  <p style="text-align: center;"> for JSSATEN for event MOKSHA21, NSUT</p>
+									</div>
+
+									<div class="column">
+										<h2 style="text-align: center;">JAVA course</h2>
+										<img src="images/Java_certificate.jpg" alt="certificate-sololearn" style="width:100%">
+										<P style="text-align: center;">by SOLOLEARN</P>  
+									</div>
+
+									<div class="column">
+										<h2 style="text-align: center;">Git learning challenge</h2>
+										<img src="images/Progate-git.png" alt="certificate-progate" style="width:100%">
+										<p style="text-align: center;"> by 	PROGATE</p>  
+									</div>
+
+								</div>
+							</span>
+						</div>
+					</section>
+<!--
+	test and experimental code 
+
+					<section id="main" class="wrapper">
+						<div class="row">
+							<div class="column">
+							  <img src="images/ca-5-1.png" alt="MOKSHA" style="width:100%">
+							</div>
+							<div class="column">
+							  <img src="images/ca-5-1.png" alt="Forest" style="width:100%">
+							</div>
+							<div class="column">
+							  <img src="images/ca-5-1.png" alt="Mountains" style="width:100%">
+							</div>
+						  </div>
+					</section>
+					
+					<section>
+						<span style="width: auto; height: auto; display:inline-block;">
+							<img class="image" src="images/png/004-cloud-coding.png" style="display:inline-block; width:100%;height:auto;"></img>	
+							<img class="image" src="images/png/004-cloud-coding.png" style="display:inline-block; width:100%;height:auto;"></img>
+							<img class="image" src="images/png/004-cloud-coding.png" style="display:inline-block; width:100%;height:auto;"></img>
+						</span>
+					</section>
+											-->
 			</div>
 
 		<!-- Footer -->
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; MIT lisence. All rights reserved.</li><li>Design with <img src="images/png/heart.png" style="height: 20px;width: auto;"> by <a href="https://www.instagram.com/k.aroura">Kushagra</a></li>
 					</ul>
 				</div>
 			</footer>
