--- a/generic_student.html
+++ b/generic_student.html
@@ -52,6 +52,13 @@
 							<p>(2019-2023) expected</p>
 						</div>
 					</section>
+					<section id="main" class="wrapper">
+						<div class="inner">
+							<span class="image fit"><img src="images/JSS-NEW.jpg" style="width: fit-content;" alt="" /></span>
+							<p>Currently, pursuing bachelors of Technology from J.S.S Academy of Technical Education, Noida sec-62 </p>
+							<p>(2019-2023) expected</p>
+						</div>
+					</section>
 
 			</div>
 
