added thank you page , connected google forms and stuff

--- a/index.html
+++ b/index.html
@@ -157,25 +157,31 @@
 								Kindly drop any queries or collaboration requests.</p>
 							<div class="split style1">
 								<section>
-									<form method="post" action="#">
+
+
+									<script type="text/javascript">var submitted=false;</script>
+									<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='thankyou.html';}"></iframe>
+
+									<form method="post" action="https://docs.google.com/forms/u/4/d/e/1FAIpQLScMRMv4Zcx_pJRFgHq5LOWNrfX3wYlE7JUOVFs8-ylPrE51VQ/formResponse" target="hidden_iframe" onsubmit="submitted=true;">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
+												<input type="text" name="entry.1780591725" id="name" />
 											</div>
 											<div class="field half">
 												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
+												<input type="text" name="entry.595392054" id="email" />
 											</div>
 											<div class="field">
 												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
+												<textarea name="message" id="entry.1311443715" rows="5"></textarea>
 											</div>
 										</div>
+
 										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
+											<li><a href="Thankyou.html" class="button submit">Send Message</a></li>
 										</ul>
-									</form>
+									</form>	
 								</section>
 								<section>
 									<ul class="contact">
