--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 											</div>
 											<div class="field">
 												<label for="message">Message</label>
-												<textarea name="message" id="entry.1311443715" rows="5"></textarea>
+												<textarea name="entry.1311443715" id="message" rows="5"></textarea>
 											</div>
 										</div>
 
