--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<div class="inner">
 							<h1>Hello</h1>
 							<p> My name's <a href="https://www.linkedin.com/in/kastrahl" target="_blank"> Kushagra Arora</a> <br>
-							currently a sophomore  B.Tech IT student at <a href="https://jssaten.ac.in/" target="_blank">JSS academy of technical education,Noida </a>.</p>
+							currently in junior year B.Tech IT student at <a href="https://jssaten.ac.in/" target="_blank">JSS academy of technical education,Noida </a>.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
